0.04

0.03 2024-01-11T22:35:35+01:00
 - Add test for processing of leader.
 - Fix examples in doc.
 - Simplify examples in doc.
 - Update copyright years.

0.02 2023-11-20T14:09:54+01:00
 - Add support of ANSI color output.

0.01 2023-11-19T21:07:25+01:00
 - First version.