@@ -31,7 +31,7 @@ requires:
   Getopt::Std: 0
   MARC::File::XML: 1.0.4
   MARC::Leader: 0
-  MARC::Leader::Print: 0.02
+  MARC::Leader::Print: 0.04
   perl: 5.6.0
 resources:
   bugtracker: https://github.com/michal-josef-spacek/App-MARC-Leader/issues
