@@ -1,4 +1,5 @@
 0.04
+ - Fix decoding without description.
 
 0.03 2024-01-11T22:35:35+01:00
  - Add test for processing of leader.
